--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "http-server -a localhost -p 8100"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
@@ -18,6 +18,7 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
+    "http-server": "^0.6.1",
     "grunt": "~0.4.5",
     "grunt-develop": "~0.4.0",
     "grunt-contrib-stylus": "~0.20.0",
