--- a/bower.json
+++ b/bower.json
@@ -8,13 +8,17 @@
   ],
   "private": true,
   "dependencies": {
-    "angular": "1.3.x",
-    "angular-mocks": "1.3.x",
+    "angular": "~1.4.1",
+    "angular-mocks": "1.4.1",
     "jquery": "~2.1.1",
     "bootstrap": "3.3.x",
     "fontawesome": "~4.2.0",
-    "angular-route": "1.3.x",
-    "angular-resource": "1.3.x",
-    "angular-toggle-switch": "~1.3.0"
+    "angular-route": "~1.4.1",
+    "angular-resource": "~1.4.1",
+    "angular-sanitize": "~1.4.1",
+    "angular-bootstrap-switch": "~0.4.1",
+    "angular-schema-form": "~0.8.2",
+    "angular-ui-select": "~0.12.0",
+    "ngstorage": "~0.3.6"
   }
 }
