--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "http-server -a localhost -p 8100"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
