--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-bootstrap-switch": "~0.4.1",
     "angular-schema-form": "~0.8.2",
     "angular-ui-select": "~0.12.0",
-    "ngstorage": "~0.3.6"
+    "ngstorage": "~0.3.6",
+    "angular-ui-ace": "~0.2.3"
   }
 }
