--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-schema-form": "~0.8.2",
     "angular-ui-select": "~0.12.0",
     "ngstorage": "~0.3.6",
-    "angular-ui-ace": "~0.2.3"
+    "angular-ui-ace": "~0.2.3",
+    "angular-bootstrap": "~0.13.0"
   }
 }
