Fixed bower dependencies issue

--- a/bower.json
+++ b/bower.json
@@ -9,18 +9,21 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.1",
+    "angular-bootstrap": "~0.13.0",
+    "angular-bootstrap-switch": "~0.4.1",
     "angular-mocks": "1.4.1",
-    "jquery": "~2.1.1",
-    "bootstrap": "3.3.x",
-    "fontawesome": "~4.3.0",
     "angular-route": "~1.4.1",
     "angular-resource": "~1.4.1",
     "angular-sanitize": "~1.4.1",
-    "angular-bootstrap-switch": "~0.4.1",
     "angular-schema-form": "~0.8.2",
-    "angular-ui-select": "~0.12.0",
-    "ngstorage": "~0.3.6",
     "angular-ui-ace": "~0.2.3",
-    "angular-bootstrap": "~0.13.0"
+    "angular-ui-select": "~0.12.0",
+    "bootstrap": "3.3.x",
+    "fontawesome": "~4.3.0",
+    "jquery": "~2.1.1",
+    "ngstorage": "~0.3.6"
+  },
+  "resolutions": {
+    "angular": "1.4.1"
   }
 }
