Make the ACE editor resizable #12 Angularjs do not support the resizable function. The solution is to use jquery-ui.

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "bootstrap": "3.3.x",
     "fontawesome": "~4.3.0",
     "jquery": "~2.1.1",
-    "ngstorage": "~0.3.6"
+    "ngstorage": "~0.3.6",
+    "jquery-ui": "~1.10.4"
   },
   "resolutions": {
     "angular": "1.4.1"
